@@ -153,6 +153,7 @@
       \item \code{c(a=1, 2)[[]]} no longer matches \code{2} but rather
       signals a \emph{classed} error.  Reported and analysed by David Vaughan in
       \PR{18367}, a duplicate of \PR{18004}, by Jan Meis et al.
+      \code{x[[]] <- v} gives an error of the same class \code{"MissingSubscriptError"}.
     }
   }
 }
